--- a/xr_3da/xrGame/M_Boar.ltx
+++ b/xr_3da/xrGame/M_Boar.ltx
@@ -79,7 +79,7 @@ ph_crash_speed_min		= 16
 ph_crash_speed_max		= 30
 ph_mass 				= 110.
 
-destroyed_vis_name	 = physics\Dead_Body\trupik_crash
+destroyed_vis_name	 	= physics\dead_body\skelet_crash_monster.ogf
 
 ph_skeleton_airr_lin_factor			= 1.5
 ph_skeleton_airr_ang_factor			= 1.5
