--- a/xr_3da/xrGame/M_Cat.ltx
+++ b/xr_3da/xrGame/M_Cat.ltx
@@ -81,7 +81,7 @@ ph_crash_speed_max   = 30
 ph_mass 		     = 30						; also it's the food
 
 
-destroyed_vis_name	 = physics\dead_body\skelet_crash_monster.ogf
+destroyed_vis_name	 = physics\dead_body\skelet_crash_monster
 
 ph_skeleton_airr_lin_factor   = 1.5
 ph_skeleton_airr_ang_factor   = 1.5
