--- a/xrStalker/Config/misc/cfg_trader.ltx
+++ b/xrStalker/Config/misc/cfg_trader.ltx
@@ -154,7 +154,8 @@ dialog_enabled = true
 anim = idle
 on_signal = action_end | {=talking_or_tutor} mob_remark@talking, {~10} mob_remark@to_reading, {~20} mob_remark@to_spinka, {~25} mob_remark@palci, {~30} mob_remark@zatylok, {~35} mob_remark@cheshit, {~40} mob_remark@idle_0, {~45} mob_remark@idle_1, mob_remark@talking
 on_info = {-esc_trader_monolog_1_played +esc_trader_monolog_1} mob_remark@monolog_1 %+esc_trader_monolog_1_played%,            {-esc_trader_tutorial_choice_played +esc_trader_tutorial_choice} mob_remark@tut_choice %+esc_trader_tutorial_choice_played%
-on_info2 = {+esc_trader_experienced -tutorial_artefact_start} mob_remark@map_quest_1, {+esc_trader_newbie -tutorial_artefact_start} mob_remark@map_quest_1
+on_info2 = {+esc_trader_experienced -tutorial_artefact_start} mob_remark@map_quest_1, {+esc_trader_newbie -tutorial_artefact_start} mob_remark@newbie_pda %-ui_pda_jobs_current -ui_pda_contacts -ui_pda_map_local%
+; сняли ui_pda_jobs_current, ui_pda_contacts и ui_pda_map_local, чтобы не реагировать, если игрок его включал до этого
 
 ; ------------------------------------------------------------------------------------------------------
 ; ОЗВУЧКА ФРАЗ
@@ -177,6 +178,118 @@ anim_head = head_anim_normal
 snd = trader_tut_choice
 on_signal = action_end | mob_remark@talking
 on_info = {+esc_trader_experienced} mob_remark@talking, {+esc_trader_newbie} mob_remark@talking
+
+; ------------------------------------------------------------------------------------------------------
+; ОБРАБОТА НОВИЧКА
+; ------------------------------------------------------------------------------------------------------
+
+; ------------------------------------------------------------------------------------------------------
+; ПДА:
+
+[mob_remark@newbie_pda]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+snd = trader_pda_on_1
+on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
+on_signal = action_end | mob_remark@before_pda2
+
+[mob_remark@before_pda2]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_how_to_talk
+on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
+on_signal = action_end | mob_remark@pda2
+
+[mob_remark@pda2]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+snd = trader_pda_on_2
+on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
+on_signal = action_end | mob_remark@before_pda3
+
+[mob_remark@before_pda3]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_how_to_talk
+on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
+on_signal = action_end | mob_remark@pda3
+
+[mob_remark@pda3]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
+snd = trader_pda_on_3
+
+[mob_remark@pda_wait]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_quest_1
+on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
+on_signal = action_end | mob_remark@pda_wait
+
+[mob_remark@describe_pda]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+snd = trader_pda_1
+on_signal = action_end | mob_remark@after_describe_pda_wait
+
+[mob_remark@after_describe_pda_wait]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_quest_1
+on_signal = action_end | mob_remark@newbie_map %-ui_pda_map_local%
+; сняли ui_pda_map_local, чтобы не реагировать, если игрок его включал до этого
+
+; ------------------------------------------------------------------------------------------------------
+; КАРТЫ:
+
+[mob_remark@newbie_map]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+snd = trader_map_on_1
+on_info = {+ui_pda_map_local} mob_remark@map_quest_1
+on_signal = action_end | mob_remark@before_map2
+
+[mob_remark@before_map2]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_how_to_talk
+on_info = {+ui_pda_map_local} mob_remark@map_quest_1
+on_signal = action_end | mob_remark@map2
+
+[mob_remark@map2]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+snd = trader_map_on_2
+on_info = {+ui_pda_map_local} mob_remark@map_quest_1
+on_signal = action_end | mob_remark@before_map3
+
+[mob_remark@before_map3]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_how_to_talk
+on_info = {+ui_pda_map_local} mob_remark@map_quest_1
+on_signal = action_end | mob_remark@map3
+
+[mob_remark@map3]
+dialog_enabled = false
+anim = idle_non_stop
+anim_head = head_anim_normal
+on_info = {+ui_pda_map_local} mob_remark@map_quest_1
+snd = trader_map_on_3
+
+[mob_remark@map_wait]
+dialog_enabled = false
+anim = idle
+;tip = tips_esc_trader_quest_1
+on_info = {+ui_pda_map_local} mob_remark@map_quest_1
+on_signal = action_end | mob_remark@map_wait
 
 ; ------------------------------------------------------------------------------------------------------
 ; ЗАДАНИЕ
