--- a/xrStalker/Config/misc/cfg_trader.ltx
+++ b/xrStalker/Config/misc/cfg_trader.ltx
@@ -197,7 +197,7 @@ on_signal = action_end | mob_remark@before_pda2
 [mob_remark@before_pda2]
 dialog_enabled = false
 anim = idle
-;tip = tips_esc_trader_how_to_talk
+tip = tips_esc_trader_activate_pda
 on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
 on_signal = action_end | mob_remark@pda2
 
@@ -212,7 +212,7 @@ on_signal = action_end | mob_remark@before_pda3
 [mob_remark@before_pda3]
 dialog_enabled = false
 anim = idle
-;tip = tips_esc_trader_how_to_talk
+tip = tips_esc_trader_activate_pda
 on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
 on_signal = action_end | mob_remark@pda3
 
@@ -222,11 +222,12 @@ anim = idle_non_stop
 anim_head = head_anim_normal
 on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
 snd = trader_pda_on_3
+on_signal = action_end | mob_remark@pda_wait
 
 [mob_remark@pda_wait]
 dialog_enabled = false
 anim = idle
-;tip = tips_esc_trader_quest_1
+tip = tips_esc_trader_activate_pda
 on_info = {+ui_pda_jobs_current} mob_remark@describe_pda, {+ui_pda_contacts} mob_remark@describe_pda, {+ui_pda_map_local} mob_remark@describe_pda
 on_signal = action_end | mob_remark@pda_wait
 
@@ -258,7 +259,7 @@ on_signal = action_end | mob_remark@before_map2
 [mob_remark@before_map2]
 dialog_enabled = false
 anim = idle
-;tip = tips_esc_trader_how_to_talk
+tip = tips_esc_trader_activate_map
 on_info = {+ui_pda_map_local} mob_remark@map_quest_1
 on_signal = action_end | mob_remark@map2
 
@@ -273,7 +274,7 @@ on_signal = action_end | mob_remark@before_map3
 [mob_remark@before_map3]
 dialog_enabled = false
 anim = idle
-;tip = tips_esc_trader_how_to_talk
+tip = tips_esc_trader_activate_map
 on_info = {+ui_pda_map_local} mob_remark@map_quest_1
 on_signal = action_end | mob_remark@map3
 
@@ -283,11 +284,12 @@ anim = idle_non_stop
 anim_head = head_anim_normal
 on_info = {+ui_pda_map_local} mob_remark@map_quest_1
 snd = trader_map_on_3
+on_signal = action_end | mob_remark@map_wait
 
 [mob_remark@map_wait]
 dialog_enabled = false
 anim = idle
-;tip = tips_esc_trader_quest_1
+tip = tips_esc_trader_activate_map
 on_info = {+ui_pda_map_local} mob_remark@map_quest_1
 on_signal = action_end | mob_remark@map_wait
 
