--- a/xrStalkerOld/helicopter.ltx
+++ b/xrStalkerOld/helicopter.ltx
@@ -74,7 +74,7 @@ flame_particles		    = weapons\generic_weapon08
 ;smoke_particles		    = weapons\generic_shoot_00
 shell_point				= 0.05, 0.22, 0.06
 shell_particles			= weapons\generic_shells
-snd_shoot				= weapons\fn2000_shoot
+snd_shoot				= weapons\pkm_shot
 
 rocket_class			= helicopter_missile ;wpn_rpg7_missile 
 launch_speed			= 76; 500
