--- a/xrStalkerOld/w_fort.ltx
+++ b/xrStalkerOld/w_fort.ltx
@@ -126,7 +126,7 @@ fire_point               	= -0.090000,0.000000,0.080000
 fire_bone                	= wpn_body
 orientation              	= 0,0,0
 position                 	= 0,0,0
-visual                   	= weapons\pm\wpn_pm_hud.ogf
+visual                   	= weapons\fort\wpn_fort_hud.ogf
 
 anim_holster				= holster
 anim_idle					= idle
