--- a/xrStalker/Config/weapons/weapons.ltx
+++ b/xrStalker/Config/weapons/weapons.ltx
@@ -1240,6 +1240,9 @@ inv_grid_height		= 1
 inv_grid_x			= 9
 inv_grid_y			= 9
 
+;вещь невозможно подобрать
+can_take			= false
+
 cost				= 50
 
 blast				= 120
