--- a/xrStalkerOld/items.ltx
+++ b/xrStalkerOld/items.ltx
@@ -303,6 +303,10 @@ inv_grid_width		= 2
 inv_grid_height		= 1
 inv_grid_x			= 16
 inv_grid_y			= 12
+
+;вещью нельзя торговать
+can_trade			= false
+
 position			= .35,.25,0
 light_trace_bone	= cone_bone
 attach_angle_offset		= 0, -3.14, 1.6
@@ -320,6 +324,7 @@ snd_night_vision_idle		= weapons\nv_loop
 night_vision_recharge_time			= 6		;(c) время зарядки аккамулятора
 night_vision_recharge_time_min		= 2		;(c) мин. время зарядки аккамулятора, после которого уст-во уже может работать
 night_vision_discharge_time			= 12	;(c) время разрядки (работы) устройства после полной зарядки
+
 
 
 [detector_simple]
