--- a/xrStalkerOld/w_beretta.ltx
+++ b/xrStalkerOld/w_beretta.ltx
@@ -40,7 +40,7 @@ immunities_sect				= weapon
 
 ;-----------------------------------------------------------------------------------
 ;базовая дисперсия
-fire_dispersion_base		= 0.12 		;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
+fire_dispersion_base		= 0.24 ;0.12 		;угол (в градусах) базовой дисперсии оружия (оружия зажатого в тисках)
 
 ;отдача
 cam_relax_speed         	= 1.5		;скорость возврата в исходное положение
@@ -59,7 +59,7 @@ hit_power                	= 62.5
 hit_impulse		 		 	= 87.5
 hit_type = fire_wound	
 
-fire_distance            	= 200
+fire_distance            	= 50
 bullet_speed		 	 	= 280		
 rpm                      	= 300
 rpm_empty_click 	 		= 200
@@ -75,10 +75,10 @@ position                 	= -0.021, -0.085, 0.0
 orientation              	= 0, 0, 0
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
-strap_position         		= -0.1,-0.45,0.2			; position (offset) and orientation of the weapon when it is strapped
-strap_orientation      		= 1.57,0,0						; (3rd person view)
-strap_bone0					= bip01_spine2
-strap_bone1					= bip01_spine1
+;strap_position         		= -0.1,-0.45,0.2			; position (offset) and orientation of the weapon when it is strapped
+;strap_orientation      		= 1.57,0,0						; (3rd person view)
+;strap_bone0					= bip01_spine2
+;strap_bone1					= bip01_spine1
 
 direction           	    = 0, 0, 1
 fire_point               	= 0.0, 0.133, 0.161
