--- a/xrStalker/Config/weapons/w_fort.ltx
+++ b/xrStalker/Config/weapons/w_fort.ltx
@@ -80,10 +80,10 @@ position                 	= -0.021, -0.10, 0.0
 orientation              	= 0, 0, 0
 
 ;--STRAP PARAMETERS-----------------------------------------------------------------
-;strap_position         		= -0.1,-0.45,0.2			; position (offset) and orientation of the weapon when it is strapped
-;strap_orientation      		= 1.57,0,0						; (3rd person view)
-;strap_bone0					= bip01_spine2
-;strap_bone1					= bip01_spine1
+strap_position         		= -0.1,-0.45,0.2			; position (offset) and orientation of the weapon when it is strapped
+strap_orientation      		= 1.57,0,0						; (3rd person view)
+strap_bone0					= bip01_spine2
+strap_bone1					= bip01_spine1
 
 startup_ammo             	= 90
 visual                   	= weapons\fort\wpn_fort.ogf
