--- a/xr_3da/xrGame/w_pb.ltx
+++ b/xr_3da/xrGame/w_pb.ltx
@@ -139,7 +139,12 @@ anim_close					= empty
 anim_idle_aim				= idle_aim
 
 ;смещения HUD для режима приближения
-zoom_offset					= -0.191400,0.079200,0.001000
-zoom_rotate_x				= -0.009700
-zoom_rotate_y				= -0.035400
+;zoom_offset					= -0.191400,0.079200,0.001000
+;zoom_rotate_x				= -0.009700
+;zoom_rotate_y				= -0.035400
 
+zoom_offset      			= -0.071400,0.079200,0.006000
+zoom_rotate_x    			= 0.035300
+zoom_rotate_y    			= 0.024600
+
+zoom_hide_crosshair	= false ;true						;to hide crosshair in zoom 
