--- a/xrStalkerOld/w_pb.ltx
+++ b/xrStalkerOld/w_pb.ltx
@@ -143,8 +143,8 @@ anim_idle_aim				= idle_aim
 ;zoom_rotate_x				= -0.009700
 ;zoom_rotate_y				= -0.035400
 
-zoom_offset      			= -0.071400,0.079200,0.006000
-zoom_rotate_x    			= 0.035300
-zoom_rotate_y    			= 0.024600
+zoom_offset      			= -0.066900,0.080200,0.006000
+zoom_rotate_x    			= 0.037300
+zoom_rotate_y    			= 0.028600
 
-zoom_hide_crosshair	= false ;true						;to hide crosshair in zoom 
+zoom_hide_crosshair	= true						;to hide crosshair in zoom 
